[gd_scene load_steps=6 format=3 uid="uid://cwuvlxvbrwonl"]

[ext_resource type="Script" uid="uid://8f11bjx76504" path="res://Scripts/granada.gd" id="1_s555v"]
[ext_resource type="Texture2D" uid="uid://d0j6q6d6srsp1" path="res://Assets/Tiles/tile_0012.png" id="2_s555v"]
[ext_resource type="Texture2D" uid="uid://bphnw41ko1qnj" path="res://Assets/SpriteExplosao.png" id="3_tfaae"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6s1an"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dat4j"]

[node name="Granada" type="Area2D"]
scale = Vector2(0.600002, 0.6)
collision_layer = 0
collision_mask = 4
script = ExtResource("1_s555v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.87755e-06, 1.19209e-07)
scale = Vector2(2.29166, 1.66667)
texture = ExtResource("2_s555v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6s1an")

[node name="AreaDeExplosao" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeExplosao"]
shape = SubResource("CircleShape2D_dat4j")

[node name="SpriteExplosao" type="Sprite2D" parent="AreaDeExplosao"]
visible = false
position = Vector2(-2.38419e-07, -4.76837e-07)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_tfaae")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
